src/objects/agf__ADM_Theme_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>agf__Theme_Work_Key__c</fullName>
        <description>Used to enforce uniqueness of the theme assignment. This is automatically populated in the trigger.</description>
        <label>Theme Work Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Theme</label>
        <referenceTo>agf__ADM_Theme__c</referenceTo>
        <relationshipLabel>Theme Assignments</relationshipLabel>
        <relationshipName>Theme_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Theme Assignments</relationshipLabel>
        <relationshipName>Theme_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Theme Assignment</label>
    <nameField>
        <displayFormat>THA-{0000}</displayFormat>
        <label>Theme Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Theme Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>